--- a/sass/modules/_variable.scss
+++ b/sass/modules/_variable.scss
@@ -1,3 +1,3 @@
-$primary-color : lighten(black, 10%);
+$primary-color : lighten(black, 0%);
 
-$secondary-color : lighten(green, 5%);
+$secondary-color : lighten(#b71c1c, 0%);
