--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,63 +1,19 @@
-@import 'modules/_variable.scss';
-@import url('https://fonts.googleapis.com/css?family=Righteous');
-@import url('https://fonts.googleapis.com/css?family=Syncopate');
-@import url('https://use.fontawesome.com/6baadd765c.js');
-@import url('https://fonts.googleapis.com/css?family=Nova+Flat');
-
-
-header {
-	div {
-		background-color : $primary-color;
-		width: 100%;
-		height : 20em;
-		display:flex;
-		align-content: flex-start;
-		div:first-child {
-			background-color : $secondary-color;
-			width: 20%;
-			height : 20em;
-			img{
-				width: 30%;
-				height: 15em;			
-			}
-		}
-		div:last-child {
-			background-color :$secondary-color;
-			margin: 5% -20% 15% 20%;
-			padding-bottom : -20%;
-			width: 27em;
-			height: 10em;
-			ul {
-				margin-bottom: 20%;
-				margin-right: 20%;
-			}
-			h1{
-				font-family: 'Syncopate';
-			}
-			h2 {
-				font-family: 'Righteous';
-				font-size: 1.8em;
-			}
-		}
-	}
-}
+@import 'modules/variable';
+@import 'modules/header';
+@import 'modules/global';
+@import 'modules/footer';
+@import 'modules/main';
 
 
 
-body {
-	margin:0;
-	font-family: 'Nova Flat';
-}
 
-ul {
-  list-style-type: none;
-}
+
 
 
 #side-nav {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 5em;
+	margin-top: 0;
 	nav {
 		background-color: $secondary-color;
 		padding-right: 5em;
@@ -81,15 +37,66 @@ ul {
 				li{
 					line-height: 2em;
 				}
-			}	
+			}
 		}
+		#formation {
+			border: 1px black solid;
+			div:last-child {
+				display:flex;
+				div{
+					div{
+						ul{
+							margin-top:0;
+						}						
+					}
+				}
+			}	
+			#liste-formation{
+				border: 1px black solid;
+			}
+			div {
+				ul{
+					margin-top:0;
+					li{
+						display:inline;
+					}
+				}				
+			}
+		}
+		#compétences{
+			width:100%;
+			margin:0;
+			border: 1px black solid;
+			div:last-child{
+				div{
+					display:flex;
+					div {
+						ul {
+							li {
+								ul {
+									li {
+										display:inline;
+										i {
+											margin:0;
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}	
 	}
+	
+
 	aside {
 		background-color: $secondary-color;
 		ul{
 			margin-top: 2em;
 			li:first-child{
-				margin:auto;
+				position:relative;
+				right: 2em;
 			}
 			li{
 				line-height: 4em;
@@ -98,20 +105,6 @@ ul {
 	}
 }
 
-footer{
-	display:flex;
-	justify-content: center;
-	ul{
-		margin: auto;
-		li{
-			display:inline;
-			margin-right: 2em;
-			margin-left: 2em;
-		}
-	}
-	div {
-		margin-bottom: auto;
-		margin-top: auto; 
-	}
-}
+
+
 
