--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,40 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Righteous");
 @import url("https://fonts.googleapis.com/css?family=Syncopate");
-@import url("https://use.fontawesome.com/6baadd765c.js");
 @import url("https://fonts.googleapis.com/css?family=Nova+Flat");
 header div {
-  background-color: #1a1a1a;
+  background-color: black;
   width: 100%;
   height: 20em;
   display: flex;
-  align-content: flex-start; }
+  justify-content: space-between; }
   header div div:first-child {
-    background-color: #009a00;
-    width: 20%;
+    background-color: #b71c1c;
+    width: 30%;
     height: 20em; }
     header div div:first-child img {
-      width: 30%;
-      height: 15em; }
-  header div div:last-child {
-    background-color: #009a00;
-    margin: 5% -20% 15% 20%;
-    padding-bottom: -20%;
-    width: 27em;
-    height: 10em; }
-    header div div:last-child ul {
+      position: relative;
+      left: 1em;
+      top: 1em;
+      width: 80%;
+      height: 80%;
+      box-shadow: 1em 1em 1em black; }
+  header div div:nth-child(2) {
+    position: relative;
+    left: 5%;
+    width: 20%;
+    background-color: #b71c1c; }
+    header div div:nth-child(2) ul {
       margin-bottom: 20%;
       margin-right: 20%; }
-    header div div:last-child h1 {
+    header div div:nth-child(2) h1 {
       font-family: 'Syncopate'; }
-    header div div:last-child h2 {
+    header div div:nth-child(2) h2 {
       font-family: 'Righteous';
-      font-size: 1.8em; }
+      font-size: 2em; }
+  header div div:last-child {
+    background-color: #b71c1c;
+    width: 10%; }
 
 body {
   margin: 0;
@@ -37,35 +43,11 @@ body {
 ul {
   list-style-type: none; }
 
-#side-nav {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5em; }
-  #side-nav nav {
-    background-color: #009a00;
-    padding-right: 5em; }
-    #side-nav nav ul li {
-      margin-top: 6em;
-      margin-bottom: 6em;
-      border: 1px black solid;
-      box-shadow: 1em 1em 1em black;
-      background-color: #1a1a1a;
-      color: #009a00; }
-  #side-nav main {
-    margin: 4% 10% 10% 10%; }
-    #side-nav main section {
-      margin-top: 3em;
-      margin-bottom: 3em; }
-      #side-nav main section ul li {
-        line-height: 2em; }
-  #side-nav aside {
-    background-color: #009a00; }
-    #side-nav aside ul {
-      margin-top: 2em; }
-      #side-nav aside ul li:first-child {
-        margin: auto; }
-      #side-nav aside ul li {
-        line-height: 4em; }
+.line {
+  width: 100%;
+  margin: auto;
+  height: 1px;
+  background-color: black; }
 
 footer {
   display: flex;
@@ -79,5 +61,111 @@ footer {
   footer div {
     margin-bottom: auto;
     margin-top: auto; }
+
+#side-nav {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0; }
+  #side-nav nav {
+    background-color: #b71c1c;
+    padding-right: 5em; }
+    #side-nav nav ul li {
+      margin-top: 6em;
+      margin-bottom: 6em;
+      border: 1px black solid;
+      box-shadow: 1em 1em 1em black;
+      background-color: black;
+      color: #b71c1c; }
+  #side-nav main {
+    margin: 4% 10% 10% 10%; }
+    #side-nav main section {
+      margin-top: 3em;
+      margin-bottom: 3em; }
+      #side-nav main section ul li {
+        line-height: 2em; }
+    #side-nav main #formation {
+      border: 1px black solid; }
+      #side-nav main #formation div:last-child {
+        display: flex; }
+        #side-nav main #formation div:last-child div div ul {
+          margin-top: 0; }
+      #side-nav main #formation #liste-formation {
+        border: 1px black solid; }
+      #side-nav main #formation div ul {
+        margin-top: 0; }
+        #side-nav main #formation div ul li {
+          display: inline; }
+    #side-nav main #compétences {
+      width: 100%;
+      margin: 0;
+      border: 1px black solid; }
+      #side-nav main #compétences div:last-child div {
+        display: flex; }
+        #side-nav main #compétences div:last-child div div ul li ul li {
+          display: inline; }
+          #side-nav main #compétences div:last-child div div ul li ul li i {
+            margin: 0; }
+  #side-nav aside {
+    background-color: #b71c1c; }
+    #side-nav aside ul {
+      margin-top: 2em; }
+      #side-nav aside ul li:first-child {
+        position: relative;
+        right: 2em; }
+      #side-nav aside ul li {
+        line-height: 4em; }
+
+#side-nav {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0; }
+  #side-nav nav {
+    background-color: #b71c1c;
+    padding-right: 5em; }
+    #side-nav nav ul li {
+      margin-top: 6em;
+      margin-bottom: 6em;
+      border: 1px black solid;
+      box-shadow: 1em 1em 1em black;
+      background-color: black;
+      color: #b71c1c; }
+  #side-nav main {
+    margin: 4% 10% 10% 10%; }
+    #side-nav main section {
+      margin-top: 3em;
+      margin-bottom: 3em; }
+      #side-nav main section ul li {
+        line-height: 2em; }
+    #side-nav main #formation {
+      border: 1px black solid; }
+      #side-nav main #formation div:last-child {
+        display: flex; }
+        #side-nav main #formation div:last-child div div ul {
+          margin-top: 0; }
+      #side-nav main #formation #liste-formation {
+        border: 1px black solid; }
+      #side-nav main #formation div ul {
+        margin-top: 0; }
+        #side-nav main #formation div ul li {
+          display: inline; }
+    #side-nav main #compétences {
+      width: 100%;
+      margin: 0;
+      border: 1px black solid; }
+      #side-nav main #compétences div:last-child div {
+        display: flex; }
+        #side-nav main #compétences div:last-child div div ul li ul li {
+          display: inline; }
+          #side-nav main #compétences div:last-child div div ul li ul li i {
+            margin: 0; }
+  #side-nav aside {
+    background-color: #b71c1c; }
+    #side-nav aside ul {
+      margin-top: 2em; }
+      #side-nav aside ul li:first-child {
+        position: relative;
+        right: 2em; }
+      #side-nav aside ul li {
+        line-height: 4em; }
 
 /*# sourceMappingURL=style.css.map */
