--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -5,14 +5,13 @@ header {
 		width: 100%;
 		height : 20em;
 		display:flex;
-		justify-content: space-between;
+		justify-content: space-between; 
 		
 		div:first-child {
 			background-color : $secondary-color;
 			width: 30%;
 			height : 20em;
-			
-			img{
+			img {
 				position: relative;
 				left: 1em;
 				top: 1em;
@@ -21,31 +20,25 @@ header {
 				box-shadow: 1em 1em 1em black;
 			}
 		}
-		
-		div:nth-child(2) {
-			position : relative;
-			left: 5%;
-			width: 20%;
+		div:last-child {
 			background-color :$secondary-color;
-			
-			ul {
-				margin-bottom: 20%;
-				margin-right: 20%;
-			}
-			
-			h1{
+			width: 30%;
+			height: 20em;
+			h1 {
 				font-family: 'Syncopate';
 			}
-			
 			h2 {
 				font-family: 'Righteous';
 				font-size: 2em;
 			}
-		}
-		
-		div:last-child {
-			background-color:$secondary-color;
-			width: 10%;
+			ul {
+				background-color: $secondary-color;
+			}
 		}
 	}	
+	.color {
+		background-color: red;
+		width: 100%;
+		height: 20em;
+	}
 }
